--- a/style.css
+++ b/style.css
@@ -26,13 +26,21 @@ footer {
 }
 
 #info {
-  text-align: left;
+  text-align: gleft;
   font-size: 10px;
   margin-top: 10px;
 }
 
 #oldal {
   background-color: rgba(0, 0, 0, 0,75);
-  margin: 100px 50px 0px
+  margin: 100px 50px 0px;
   padding: 50px;
 } 
+
+h1{ color: white;
+  text-align: center;
+  text-decoration: underline;}
+
+  h2{ color: white;}
+
+  p{ color: white; text-align: justify;font-size: 10px;}
